# woolie-project

./: .gitignore  Agent.md  Dockerfile  README.md  databricks.yml  databricks_env.yml  environment.yml  pyproject.toml  requirements_ingest.txt  rqeuirements_ingest.txt
.github/workflows/: databricks-ci.yml  handshake-test.yml  hellow-world.yml  simulator-image-ci.yml
app/api/: main.py
app/simulation/: main.py  producer.py  smoke_test.py
app/simulation/clients/: coingecko.py
app/simulation/producers/: pubsub_producer.py
dbt/: dbt_project.yml  package-lock.yml  packages.yml
dbt/macros/: generate_schema_name.sql
dbt/models/bronze/: _sources.yml
dbt/models/gold/: _models.yml  fact_bitcoin_daily_summary.sql  fct_bitcoin_daily_summary.sql
dbt/models/silver/: _models.yml  _silver_models.yml  silver_bitcoin_prices.sql  stg_bitcoin_prices.sql
dbt_project/: dbt_project.yml  packages.yml
infrastructure/: .terraform.lock.hcl  auth_github.tf  databricks_resources.tf  databricks_unity_catalog.tf  gcp_platform.tf  main.tf  providers.tf  variable.tf
notebook/: api_test.ipynb  sub_test.ipynb  test.ipynb
notebooks/databricks_playground/: test.ipynb
notebooks/research/: api_test.ipynb  sub_test databricks.ipynb  sub_test.ipynb  test.ipynb
pipelines/ingestion/streaming/: pubsub_to_bronze.py
resources/infrastructure/: catalogs.yml
resources/jobs/: dbt_jobs.yml  streaming_jobs.yml
src/: main.py
tests/unit/: test_coingecko_client.py  test_producer.py  test_pubsub_producer.py
